feat: make OpenRouter default model configurable via SNAPSHELL_OPENROUTER_MODEL

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # OpenRouter API key
 SNAPSHELL_OPENROUTER_API_KEY=your_openrouter_api_key_here
 
+# Optional: set the default model to use for OpenRouter requests (can be overridden with -m)
+# Format: provider/model e.g. groq/fast-model or openai/gpt-oss-20b
+SNAPSHELL_OPENROUTER_MODEL=openai/gpt-oss-20b
+
 # Optional custom system messages
 SNAPSHELL_SYSTEM="You are a strict shell command generator. Output only shell commands."
 SNAPSHELL_SYSTEM_SINGLE="Single-line only instruction"
